add email templates and add activation mail after registration, after login get back to previous page

--- a/netmanga_website/netmanga_website/templates/oneshot_viewer.html
+++ b/netmanga_website/netmanga_website/templates/oneshot_viewer.html
@@ -118,6 +118,20 @@
                 
                 <li class="like-buttons">
                     <div>
+                        {% if not user.is_authenticated %}
+                        <div id="like">
+                            <a class="btn btn-like" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}">
+                                <i class="fa fa-thumbs-up"></i> 
+                                <small class="thumbs-up">{{likes}}</small>
+                            </a> 
+                        </div>
+                        <div id="dislike">
+                            <a class="btn btn-like" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}">
+                                <i class="fa fa-thumbs-down"></i> 
+                                <small class="thumbs-down">{{dislikes}}</small>
+                            </a>
+                        </div>
+                        {% else %}
                         <form id="like" method="post">
                             {% csrf_token %}
                             <input type="hidden" name="like" value="1"/>
@@ -154,7 +168,6 @@
                             
                             {% endif %}
                         </form>
-                        {%  if user.is_authenticated %}
                         <script>
                             var likes = parseInt('{{likes}}')
                             var dislikes = parseInt('{{dislikes}}')
@@ -240,13 +253,13 @@
                                     <div class="dropdown-text">Report</div> 
                                 </a>
                                 {% else %}
-                                <a class="dropdown-item" id="give_award" href="{% url 'accounts:login' %}">
+                                <a class="dropdown-item" id="give_award" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}">
                                     <div class="dropdown-image">
                                         <i class="fa fa-gift"></i>
                                     </div> 
                                     <div class="dropdown-text">Awards</div> 
                                 </a>
-                                <a class="dropdown-item" id="report_chapter" href="{% url 'accounts:login' %}"> 
+                                <a class="dropdown-item" id="report_chapter" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}"> 
                                     <div class="dropdown-image">
                                         <i class="fa fa-flag"></i>
                                     </div> 
@@ -407,9 +420,15 @@
                     {% for field in comment_form %}
                     {{field}}
                     {% endfor %}
+                    {% if user.is_authenticated %}
                     <button class=" btn btn-login">
                         Publish
                     </button>
+                    {% else %}
+                    <a href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}" class=" btn btn-login">
+                        Publish
+                    </a>
+                    {% endif %}
                 </form>
                 </br>
             </li>
@@ -419,6 +438,20 @@
                 <small class="username">{{ comment_info.comment.user.username  }}</small>
                 <p class= "comment">{{ comment_info.comment.comment }}</p>
                 <div class="row">
+                    {% if not user.is_authenticated %}
+                        <div id="commentlike" class="commentlike-{{forloop.counter}}">
+                            <a class="btn btn-like" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}">
+                                <i class="fa fa-thumbs-up"></i> 
+                                <small class="thumbs-up">{{comment_info.comment.like}}</small>
+                            </a> 
+                        </div>
+                        <div id="commentdislike" class="commentdislike-{{forloop.counter}}">
+                            <a class="btn btn-like" href="{% url 'accounts:login' %}?next={% firstof request.path '/' %}">
+                                <i class="fa fa-thumbs-down"></i> 
+                                <small class="thumbs-down">{{comment_info.comment.dislike}}</small>
+                            </a>
+                        </div>
+                    {% else %}
                     <form id="commentlike" class="commentlike-{{forloop.counter}}" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="commentlike" value="{{comment_info.comment.pk}}"/>
@@ -452,6 +485,7 @@
                         <small class="thumbs">{{comment_info.comment.dislike}} </small>
                         {% endif %}  
                     </form>
+                    {% endif %}
                 </div>
             </li>
             {% if user.is_authenticated %}
