--- a/netmanga_website/netmanga_website/templates/accounts/login.html
+++ b/netmanga_website/netmanga_website/templates/accounts/login.html
@@ -30,7 +30,7 @@
 
                 {% if not success %}
                 <div class="alert alert-danger" role="alert">
-                    Given Username or Password is incorrect
+                    {{error_message}}
                 </div>
                 {% endif %}
 
