--- a/netmanga_website/netmanga_website/templates/oneshot_viewer.html
+++ b/netmanga_website/netmanga_website/templates/oneshot_viewer.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         
         
-        <div class=" w-100 order-1 order-sm-0">
+        <div class=" wi-100 order-1 order-sm-0">
             <!--Logo and Homepage Nav-->
             <a class="navbar-brand" href="{% url 'public:index' %}">
                 <img src="{% static 'img/netmanga_logo.png' %}" alt="NetManga Logo" class="logo-nav">
@@ -44,7 +44,7 @@
         </div>
         <!--Search Engine and Profile/Login-->
 
-        <div class="navbar-collapse collapse w-100 order-3">
+        <div class="navbar-collapse collapse wi-100 order-3">
             <ul class="viewer-nav ms-auto">
                 <li class="nav-chapter-item">
                     <div class="nav-chapter-link">
